# CodeGenerator

./: .gitignore  Makefile  README.md  ace.ml  ace_common.ml  ace_js.ml  ace_p.ml  discrepancy_investigation.txt  dune  dune-project  pkmn_data.ml  pkmn_data_common.ml  save_edit.ml  test.txt
.github/workflows/: webeditor.yml
ARM/: arm.ml  arm.mli  arm_printer.ml  arm_printer.mli  dune  lexer.mll  optimizer.ml  optimizer.mli  parse.ml  parse.mli  parser.mly  parser_ast.ml  parser_ast.mli  preprocess.ml  preprocess.mli
Boxes/: boxes.ml  boxes.mli  charset.ml  charset.mli  dune  exit.ml  exit.mli  name.ml  name.mli
Charset/: charset.ml  dune  name.ml  name.mli
Files/ExitCodes/: 64.txt  65.txt  CertificateENG.txt  CertificateFR.txt  CertificateFRA.txt  CertificateFullENG.txt  CertificateFullFRA.txt  CertificateFullGER.txt  CertificateFullITA.txt  CertificateFullJAP.txt  CertificateFullSPA.txt  CertificateGER.txt  CertificateITA.txt  CertificateJAP.txt  CertificateSPA.txt  CertificateShortENG.txt  CertificateShortFRA.txt  CertificateShortGER.txt  CertificateShortITA.txt  CertificateShortJAP.txt  CertificateShortSPA.txt  ShortCertificateENG.txt  ShortCertificateFRA.txt  ShortExitCode.txt  WhiteOutBox14ENG.txt  WhiteOutENG.txt  WhiteOutFRA.txt  WhiteOutGER.txt  WhiteOutITA.txt  WhiteOutJAP.txt  WhiteOutSPA.txt
Files/ExitCodes/CertificateENG/: 64.txt
Files/Main/: Access_Backyard.txt  ChangeTrainerName.txt  Obtain_Fast_Clone_Species.txt  Read_PID.txt  Read_TID.txt  Seedot_to_40E9.txt  Seedot_to_40ED.txt  ShortExitCodeMaker
Files/Main/MerrpAndSleipnir/: Obtain_Fast_Clone_Species.txt
Files/Main/Old/: Write_IVs_position_2.txt  Write_IVs_position_3.txt
Files/Main/PkmnData/: Alter_checksum.txt  Change_species.txt  Read_IVs.txt  Read_OTID.txt  Read_PID.txt  Read_TID.txt  Write_IVs.txt  Write_IVs_position_1.txt  Write_IVs_position_4.txt
Files/Main/Various/: ChangeTrainerNameENG.txt  ShortCertificateInitENG.txt  ShortCertificateInitFRA.txt
IO/: IO_utils.ml  dune  fs.ml  fs.mli  lexer.mll  parse.ml  parse.mli  parser.mly  preprocess.ml  preprocess.mli  utils.ml
Main/: ace.ml  ace_common.ml  ace_js.ml  ace_lib.ml  ace_p.ml  dune  encoder.ml  encoder_common.ml  encoder_js.ml  pkmn_data_common.ml  pkmn_data_js.ml  save_edit.ml  seed_tools.ml  seed_tools_common.ml  seed_tools_js.ml  settings.ml  test.ml
Pokemon/: seed.ml  seed.mli  structure.ml  structure.mli
Resources/: Access_Backyard.txt  FishingStallSearch.cs  Obtain_Fast_Clone_Species.txt  Pokemon - Emerald Version (USA, Europe).wch  Read_PID.txt  ace_species.txt  references.txt  seed.py  sprite_callback.py  stable_ace.txt
Save/: constants.ml  dune  save.ml  save.mli  seed.ml  seed.mli  structure.ml  structure.mli
Utils/: settings.ml  utils.ml
html/: autocomplete.css  autocomplete.js  config.js  ids.js  index.html  index_frlg.html  index_rs.html  scripts.js  style.css
html/doc/: index.html
html/scripts/ivs/: .gitignore  index.html
html/scripts/seed/: .gitignore  index.html
library_html/: .gitignore  ace_prama.js  data.csv  extract.py  index.html
prama_html/: ace_prama.js
