(library
  (name ace_common)
  (wrapped false)
  (libraries str utils charset boxes arm io)
  (modules ace_common)
; (preprocess (pps ppx_deriving.show ppx_deriving.ord))
)

(library
  (name pkmn)
  (wrapped false)
  (libraries num save charset)
  (modules pkmn_data_common seed_tools_common)
; (preprocess (pps ppx_deriving.show ppx_deriving.ord))
)

(executable
 (name test)
 (libraries ace_common)
 (modules test)
)
(executable
 (name ace)
 (libraries ace_common)
 (modules ace)
)
(executable
 (name ace_p)
 (libraries ace_common)
 (modules ace_p)
)
(executable
  (name ace_js)
  (libraries ace_common)
  (modules ace_js)
  (modes js)
  (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name save_edit)
 (libraries pkmn)
 (modules save_edit)
)

(executable
 (name pkmn_data)
 (libraries pkmn)
 (modules pkmn_data)
)
(executable
  (name pkmn_data_js)
  (libraries pkmn)
  (modules pkmn_data_js)
  (modes js)
  (preprocess (pps js_of_ocaml-ppx))
)

(executable
 (name seed_tools)
 (libraries pkmn)
 (modules seed_tools)
)
(executable
  (name seed_tools_js)
  (libraries pkmn)
  (modules seed_tools_js)
  (modes js)
  (preprocess (pps js_of_ocaml-ppx))
)